deployments/minikube/squrl_api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: squrl-api-deployment
  labels:
    app: squrl-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: squrl-api
  template:
    metadata:
      labels:
        app: squrl-api
    spec:
      containers:
      - name: squrl-api
        image: docker.io/library/squrl-api-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: squrl-api-service
  labels:
    app: squrl-api
spec:
  selector:
    app: squrl-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
