deployments/minikube/squrl_redirection.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: squrl-redirection-deployment
  labels:
    app: squrl-redirection
spec:
  replicas: 1
  selector:
    matchLabels:
      app: squrl-redirection
  template:
    metadata:
      labels:
        app: squrl-redirection
    spec:
      containers:
      - name: squrl-redirection
        image: docker.io/library/squrl-redirection-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: squrl-redirection-service
  labels:
    app: squrl-redirection
spec:
  selector:
    app: squrl-redirection
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
