deployments/minikube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: squrl-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  
spec: 
  rules:
  - host: api.squrl.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: squrl-api-service
            port: 
              number: 8080

  - host: squrl.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: squrl-redirection-service
            port: 
              number: 8080
